--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  audioplayers: ^5.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -62,6 +62,10 @@ flutter:
    - assets/images/numbers/
    - assets/images/family_members/
    - assets/images/colors/
+   - assets/sounds/colors/
+   - assets/sounds/family_members/
+   - assets/sounds/numbers/
+   - assets/sounds/phrases/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
